spade-tests/src/snapshots/spade_tests__ast_lowering__mut_wires_of_ports_are_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct port A {}


entity x(a: &mut A) -> bool __builtin__


error: Can't create a wire of ports
  ┌─ testinput:4:13
  │
4 │ entity x(a: &mut A) -> bool __builtin__
  │             ^^^^^^
  │             │    │
  │             │    Because this is a port
  │             This can't be a wire


